<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/txtRes"
       android:layout_marginTop="32sp"
       android:textAlignment="center"
       android:textSize="32sp"
       android:text="result"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/firstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="num1"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/secondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="num2"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/calculate"
        android:text="calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>